--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "Development of a small Web Framework",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:db": "json-server -w db.json",
+    "start:parcel": "parcel index.html"
   },
   "author": "gipeters",
   "license": "ISC",
   "devDependencies": {
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "axios": "^0.26.0"
   }
 }
